# SpaceLook

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.zh-CN.md  main.py  可以，下面我直接按“可落地实现”的方式写一版。.txt
catalog/: open_with_catalog.cpp  open_with_catalog.h
core/: PreviewFileReader.cpp  PreviewFileReader.h  RenderType.json  TextEncodingDetector.cpp  TextEncodingDetector.h  file_suffix_utils.cpp  file_suffix_utils.h  file_type_detector.cpp  file_type_detector.h  hovered_item_info.h  main.cpp  preview_manager.cpp  preview_manager.h  preview_state.cpp  preview_state.h  render_type_registry.cpp  render_type_registry.h
installer/: SpaceLook.iss
platform/: explorer_item_locator.cpp  explorer_item_locator.h  lindesk_hover_client.h  spacelook_ipc_server.cpp  spacelook_ipc_server.h
renderers/: CodeThemeManager.cpp  CodeThemeManager.h  FileTypeIconResolver.cpp  FileTypeIconResolver.h  FluentIconFont.cpp  FluentIconFont.h  IPreviewRenderer.h  ModeSwitchButton.cpp  ModeSwitchButton.h  OpenWithButton.cpp  OpenWithButton.h  PreviewCancellationToken.h  PreviewHeaderBar.cpp  PreviewHeaderBar.h  PreviewHost.cpp  PreviewHost.h  PreviewLoadGuard.h  PreviewStateVisuals.cpp  PreviewStateVisuals.h  QmlShellRenderer.cpp  QmlShellRenderer.h  RendererRegistry.cpp  RendererRegistry.h  SelectableTitleLabel.cpp  SelectableTitleLabel.h
renderers/certificate/: CertificateRenderer.cpp  CertificateRenderer.h
renderers/code/: CodeRenderer.cpp  CodeRenderer.h
renderers/document/: DocumentRenderer.cpp  DocumentRenderer.h  PreviewHandlerHost.cpp  PreviewHandlerHost.h
renderers/folder/: FolderRenderer.cpp  FolderRenderer.h
renderers/image/: BaiduOcrService.cpp  BaiduOcrService.h  ImageRenderer.cpp  ImageRenderer.h  OcrRunner.cpp  OcrRunner.h  OcrTypes.h  WindowsOcrService.cpp  WindowsOcrService.h
renderers/markup/: LiteHtmlView.cpp  LiteHtmlView.h  QtLiteHtmlContainer.cpp  QtLiteHtmlContainer.h  RenderedPageRenderer.cpp  RenderedPageRenderer.h  WebView2HtmlView.cpp  WebView2HtmlView.h
renderers/media/: MediaRenderer.cpp  MediaRenderer.h
renderers/pdf/: PdfDocument.cpp  PdfDocument.h  PdfRenderer.cpp  PdfRenderer.h  PdfViewWidget.cpp  PdfViewWidget.h  PdfiumBridge.cpp  PdfiumBridge.h
renderers/summary/: ArchiveRenderer.cpp  ArchiveRenderer.h  SummaryRenderer.cpp  SummaryRenderer.h
renderers/text/: TextRenderer.cpp  TextRenderer.h
renderers/welcome/: WelcomeRenderer.cpp  WelcomeRenderer.h
resources/: spacelook.qrc
settings/: app_translator.cpp  app_translator.h  legacy_settings_bridge.cpp  render_type_settings.cpp  render_type_settings.h  spacelook_ui_settings.cpp  spacelook_ui_settings.h  ui_settings.cpp
translations/: SpaceLook_zh_CN.qm  SpaceLook_zh_CN.ts
viewers/: QuickPageViewer.qml  SettingsPage.qml  SettingsPagePreview.qml
widgets/: OcrCaptureOverlay.cpp  OcrCaptureOverlay.h  OcrResultWindow.cpp  OcrResultWindow.h  PreviewCapsuleMenu.cpp  PreviewCapsuleMenu.h  SpaceLookWindow.cpp  SpaceLookWindow.h
